// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test completed 1`] = `
"[35m[4m[1m# Markdown title		Body		* List item 1		* List item 2[22m[24m[39m

"
`;

exports[`test errored 1`] = `
"
https://calibreapp.com on Chrome Desktop
🇺🇸  North Virginia, USA

5:09AM 26-Apr-2019

Calibre was unable to load the page. Please make sure the page URL and site authentication settings are correct.

View the full report https://calibreapp.com/tests/b3baaa1/1fe9862
    "
`;

exports[`test incomplete 1`] = `
"[0mTest in progress[0m

"
`;

exports[`test timeout 1`] = `
"
https://calibreapp.com on Chrome Desktop
🇺🇸  North Virginia, USA

5:09AM 26-Apr-2019

The test took too long to complete.

View the full report https://calibreapp.com/tests/b3baaa1/1fe9862"
`;
